chore : 폴더 조회 기능 변경